# subsurface-social-server

./: .gitignore  Cargo.toml  Makefile
_local/: Dockerfile  docker-compose.yml
migrations/2023-08-03-231429_authentication_table/: up.sql
migrations/2023-08-04-011107_posts_table/: up.sql
src/: schema.rs
src/models/: mod.rs  post.rs  user_auth.rs
